--- a/Conference_Final/references.bib
+++ b/Conference_Final/references.bib
@@ -10,7 +10,60 @@
   eprint = {http://ijr.sagepub.com/content/9/2/62.full.pdf+html}, 
   journal = {The International Journal of Robotics Research}
 }
-
+@article{baker2017rational,
+	title={Rational quantitative attribution of beliefs, desires and percepts in human mentalizing},
+	author={Baker, Chris L and Jara-Ettinger, Julian and Saxe, Rebecca and Tenenbaum, Joshua B},
+	journal={Nature Human Behaviour},
+	volume={1},
+	pages={0064},
+	year={2017},
+	publisher={Nature Publishing Group}
+}
+@inproceedings{baker2007goal,
+	title={Goal inference as inverse planning},
+	author={Baker, Chris L and Tenenbaum, Joshua B and Saxe, Rebecca R},
+	booktitle={Proceedings of the Cognitive Science Society},
+	volume={29},
+	number={29},
+	year={2007}
+}
+@article{baker2009action,
+	title={Action understanding as inverse planning},
+	author={Baker, Chris L and Saxe, Rebecca and Tenenbaum, Joshua B},
+	journal={Cognition},
+	volume={113},
+	number={3},
+	pages={329--349},
+	year={2009},
+	publisher={Elsevier}
+}
+@article{barrett2005accurate,
+	title={Accurate judgments of intention from motion cues alone: A cross-cultural study},
+	author={Barrett, H Clark and Todd, Peter M and Miller, Geoffrey F and Blythe, Philip W},
+	journal={Evolution and Human Behavior},
+	volume={26},
+	number={4},
+	pages={313--331},
+	year={2005},
+	publisher={Elsevier}
+}
+@article{donoghue2002connecting,
+	title={Connecting cortex to machines: recent advances in brain interfaces},
+	author={Donoghue, John P},
+	journal={Nature neuroscience},
+	volume={5},
+	pages={1085--1088},
+	year={2002},
+	publisher={Nature publishing group}
+}
+@inproceedings{atanasov2014information,
+	title={Information acquisition with sensing robots: Algorithms and error bounds},
+	author={Atanasov, Nikolay and Le Ny, Jerome and Daniilidis, Kostas and Pappas, George J},
+	booktitle={Robotics and Automation (ICRA), 2014 IEEE International Conference on},
+	pages={6447--6454},
+	year={2014},
+	organization={IEEE}
+}
 @article{kalman1960new,
   title={A new approach to linear filtering and prediction problems},
   author={Kalman, R.E.},
