--- a/Conference_Final/references.bib
+++ b/Conference_Final/references.bib
@@ -12,7 +12,7 @@
 }
 @article{baker2017rational,
 	title={Rational quantitative attribution of beliefs, desires and percepts in human mentalizing},
-	author={Baker, Chris L and Jara-Ettinger, Julian and Saxe, Rebecca and Tenenbaum, Joshua B},
+	author={Baker, Chris L. and Jara-Ettinger, Julian and Saxe, Rebecca R. and Tenenbaum, Joshua B.},
 	journal={Nature Human Behaviour},
 	volume={1},
 	pages={0064},
@@ -21,15 +21,13 @@
 }
 @inproceedings{baker2007goal,
 	title={Goal inference as inverse planning},
-	author={Baker, Chris L and Tenenbaum, Joshua B and Saxe, Rebecca R},
+	author={Baker, Chris L. and Tenenbaum, Joshua B. and Saxe, Rebecca R.},
 	booktitle={Proceedings of the Cognitive Science Society},
-	volume={29},
-	number={29},
 	year={2007}
 }
 @article{baker2009action,
 	title={Action understanding as inverse planning},
-	author={Baker, Chris L and Saxe, Rebecca and Tenenbaum, Joshua B},
+	author={Baker, Chris L. and Saxe, Rebecca R. and Tenenbaum, Joshua B.},
 	journal={Cognition},
 	volume={113},
 	number={3},
@@ -39,7 +37,7 @@
 }
 @article{barrett2005accurate,
 	title={Accurate judgments of intention from motion cues alone: A cross-cultural study},
-	author={Barrett, H Clark and Todd, Peter M and Miller, Geoffrey F and Blythe, Philip W},
+	author={Barrett, Clark H. and Todd, Peter M. and Miller, Geoffrey F. and Blythe, Philip W.},
 	journal={Evolution and Human Behavior},
 	volume={26},
 	number={4},
@@ -49,8 +47,8 @@
 }
 @article{donoghue2002connecting,
 	title={Connecting cortex to machines: recent advances in brain interfaces},
-	author={Donoghue, John P},
-	journal={Nature neuroscience},
+	author={Donoghue, John P.},
+	journal={Nature Neuroscience},
 	volume={5},
 	pages={1085--1088},
 	year={2002},
@@ -58,11 +56,9 @@
 }
 @inproceedings{atanasov2014information,
 	title={Information acquisition with sensing robots: Algorithms and error bounds},
-	author={Atanasov, Nikolay and Le Ny, Jerome and Daniilidis, Kostas and Pappas, George J},
-	booktitle={Robotics and Automation (ICRA), 2014 IEEE International Conference on},
-	pages={6447--6454},
-	year={2014},
-	organization={IEEE}
+	author={Atanasov, Nikolay and Le Ny, Jerome and Daniilidis, Kostas and Pappas, George J.},
+	booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
+	year={2014}
 }
 @article{kalman1960new,
   title={A new approach to linear filtering and prediction problems},
@@ -76,15 +72,13 @@
 }
 @inproceedings{miller2013trajectory,
 	title={Trajectory optimization for continuous ergodic exploration},
-	author={Miller, Lauren M and Murphey, Todd D},
-	booktitle={American Control Conference (ACC), 2013},
-	pages={4196--4201},
-	year={2013},
-	organization={IEEE}
+	author={Miller, Lauren M. and Murphey, Todd D.},
+	booktitle={American Control Conference (ACC)},
+	year={2013}
 }
 @article{miller2016ergodic,
 	title={Ergodic exploration of distributed information},
-	author={Miller, Lauren M and Silverman, Yonatan and MacIver, Malcolm A and Murphey, Todd D},
+	author={Miller, Lauren M. and Silverman, Yonatan and MacIver, Malcolm A. and Murphey, Todd D.},
 	journal={IEEE Transactions on Robotics},
 	volume={32},
 	number={1},
@@ -94,38 +88,30 @@
 }
 @inproceedings{goodfellow2010help,
 	title={Help me help you: Interfaces for personal robots},
-	author={Goodfellow, Ian J and Koenig, Nate and Muja, Marius and Pantofaru, Caroline and Sorokin, Alexander and Takayama, Leila},
-	booktitle={Proceedings of the 5th ACM/IEEE international conference on Human-robot interaction},
-	pages={187--188},
-	year={2010},
-	organization={IEEE}
+	author={Goodfellow, Ian J. and Koenig, Nate and Muja, Marius and Pantofaru, Caroline and Sorokin, Alexander and Takayama, Leila},
+	booktitle={Proceedings of ACM/IEEE International Conference on Human-Robot Interaction (HRI)},
+	year={2010}
 }
 
 @inproceedings{volosyak2005rehabilitation,
-	title={Rehabilitation robot FRIEND II-the general concept and current implementation},
+	title={Rehabilitation robot {FRIEND II}-the general concept and current implementation},
 	author={Volosyak, Ivan and Ivlev, Oleg and Graser, Axel},
-	booktitle={9th International Conference on Rehabilitation Robotics (ICORR), 2005},
-	pages={540--544},
-	year={2005},
-	organization={IEEE}
+	booktitle={Proceedings of the International Conference on Rehabilitation Robotics (ICORR)},
+	year={2005}
 }
 \\
 @inproceedings{tsui2008development,
 	title={Development and evaluation of a flexible interface for a wheelchair mounted robotic arm},
 	author={Tsui, Katherine and Yanco, Holly and Kontak, David and Beliveau, Linda},
-	booktitle={Proceedings of the 3rd ACM/IEEE International Conference on Human Robot Interaction},
-	pages={105--112},
-	year={2008},
-	organization={ACM}
+	booktitle={Proceedings of the ACM/IEEE International Conference on Human-Robot Interaction (HRI)},
+	year={2008}
 }
 
 @inproceedings{herlant2016assistive,
 	title={Assistive Teleoperation of Robot Arms via Automatic Time-Optimal Mode Switching},
-	author={Herlant, Laura V and Holladay, Rachel M and Srinivasa, Siddhartha S},
-	booktitle={The 11th ACM/IEEE International Conference on Human--Robot Interaction (HRI)},
-	pages={35--42},
-	year={2016},
-	organization={IEEE}
+	author={Herlant, Laura V. and Holladay, Rachel M. and Srinivasa, Siddhartha S.},
+	booktitle={Proceedings of the ACM/IEEE International Conference on Human-Robot Interaction (HRI)},
+	year={2016}
 }
 
 @article{monsell2003task,
@@ -141,7 +127,7 @@
 
 @article{gopinath2017human,
 	title={Human-in-the-Loop Optimization of Shared Autonomy in Assistive Robotics},
-	author={Gopinath, Deepak and Jain, Siddarth and Argall, Brenna D},
+	author={Gopinath, Deepak and Jain, Siddarth and Argall, Brenna D.},
 	journal={IEEE Robotics and Automation Letters},
 	volume={2},
 	number={1},
@@ -152,34 +138,26 @@
 @inproceedings{nuttin2002selection,
 	title={Selection of suitable human-robot interaction techniques for intelligent wheelchairs},
 	author={Nuttin, Marnix and Vanhooydonck, Dirk and Demeester, Eric and Van Brussel, Hendrik},
-	booktitle={Proceedings of the 11th IEEE International Workshop on Robot and Human Interactive Communication, 2002.},
-	pages={146--151},
-	year={2002},
-	organization={IEEE}
+	booktitle={Proceedings of the IEEE International Workshop on Robot and Human Interactive Communication},
+	year={2002}
 }
 @inproceedings{choi2008laser,
 	title={Laser pointers and a touch screen: intuitive interfaces for autonomous mobile manipulation for the motor impaired},
-	author={Choi, Young Sang and Anderson, Cressel D and Glass, Jonathan D and Kemp, Charles C},
-	booktitle={Proceedings of the 10th International ACM SIGACCESS Conference on Computers and accessibility},
-	pages={225--232},
+	author={Choi, Young Sang and Anderson, Cressel D. and Glass, Jonathan D. and Kemp, Charles C.},
+	booktitle={Proceedings of the International SIGACCESS Conference on Computers and Accessibility},
 	year={2008},
-	organization={ACM}
 }
 @inproceedings{dragan2013legibility,
 	title={Legibility and predictability of robot motion},
-	author={Dragan, Anca D and Lee, Kenton CT and Srinivasa, Siddhartha S},
-	booktitle={2013 8th ACM/IEEE International Conference on Human-Robot Interaction (HRI)},
-	pages={301--308},
-	year={2013},
-	organization={IEEE}
+	author={Dragan, Anca D. and Lee, Kenton CT. and Srinivasa, Siddhartha S.},
+	booktitle={Proceedings of the ACM/IEEE International Conference on Human-Robot Interaction (HRI)},
+	year={2013}
 }
 @inproceedings{holladay2014legible,
 	title={Legible robot pointing},
-	author={Holladay, Rachel M and Dragan, Anca D and Srinivasa, Siddhartha S},
-	booktitle={The 23rd IEEE International Symposium on Robot and Human Interactive Communication (RO-MAN), 2014},
-	pages={217--223},
-	year={2014},
-	organization={IEEE}
+	author={Holladay, Rachel M. and Dragan, Anca D. and Srinivasa, Siddhartha S.},
+	booktitle={The IEEE International Symposium on Robot and Human Interactive Communication (RO-MAN)},
+	year={2014}
 }
 
 @article{dragan2013generating,
@@ -190,18 +168,14 @@
 
 @inproceedings{sorokin2010people,
 	title={People helping robots helping people: Crowdsourcing for grasping novel objects},
-	author={Sorokin, Alexander and Berenson, Dmitry and Srinivasa, Siddhartha S and Hebert, Martial},
-	booktitle={2010 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
-	pages={2117--2122},
-	year={2010},
-	organization={IEEE}
+	author={Sorokin, Alexander and Berenson, Dmitry and Srinivasa, Siddhartha S. and Hebert, Martial},
+	booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+	year={2010}
 }
 
 @inproceedings{rosenthal2010effective,
 	title={An effective personal mobile robot agent through symbiotic human-robot interaction},
 	author={Rosenthal, Stephanie and Biswas, Joydeep and Veloso, Manuela},
-	booktitle={Proceedings of the 9th International Conference on Autonomous Agents and Multiagent Systems},
-	pages={915--922},
-	year={2010},
-	organization={International Foundation for Autonomous Agents and Multiagent Systems}
+	booktitle={Proceedings of the International Conference on Autonomous Agents and Multiagent Systems},
+	year={2010}
 }
