--- a/Conference_Final/references.bib
+++ b/Conference_Final/references.bib
@@ -19,6 +19,16 @@
 	year={2017},
 	publisher={Nature Publishing Group}
 }
+@article{dragan2013policy,
+	title={A policy-blending formalism for shared control},
+	author={Dragan, Anca D. and Srinivasa, Siddhartha S.},
+	journal={The International Journal of Robotics Research},
+	volume={32},
+	number={7},
+	pages={790--805},
+	year={2013},
+	publisher={SAGE Publications Sage UK: London, England}
+}
 @inproceedings{baker2007goal,
 	title={Goal inference as inverse planning},
 	author={Baker, Chris L. and Tenenbaum, Joshua B. and Saxe, Rebecca R.},
